--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tienda de productos id="prod-3"</title>
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
     <!-- Fuentes de Google Fonts -->
@@ -12,75 +12,33 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300&family=Roboto&display=swap" rel="stylesheet">
 
+    <!-- Bootstrap CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+
     <!-- Iconos de Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 <body>
-    <div class="container">
-        <div class="header">
-            <h2>Tienda DOM</h2>
-        </div>
-        <div class="centro">
-        <div class="productos ">
-            <div class="producto" id="prod-1">
-                <img src="assets/foto-1.png" alt="" srcset="">
-                <h4>Walh</h4>
-                <p>Solo por <b>$30</b>
-                <br><em>Estamos en ofertas</em>😉</p>
-                <button class="btn btn-dark">Comprar</button>
-            </div>
-            <div class="producto" id="prod-2">
-                <img src="assets/foto-2.png" alt="" srcset="">
-                <h4>SmartWatch</h4>
-                <p>Solo por <b>$30</b>
-                <br><em>Estamos en ofertas</em>😉</p>
-                <button class="btn btn-dark">Comprar</button>
-            </div>
-            <div class="producto" id="prod-3">
-                <img src="assets/foto-3.png" alt="" srcset="">
-                <h4>Osciloscopio</h4>
-                <p>Solo por <b>$30</b>
-                <br><em>Estamos en ofertas</em>😉</p>
-                <button class="btn btn-dark">Comprar</button>
-            </div>
-            <div class="producto" id="prod-4">
-                <img src="assets/foto-4.png" alt="" srcset="">
-                <h4>Gafas de Sol</h4>
-                <p>Solo por <b>$30</b>
-                <br><em>Estamos en ofertas</em>😉</p>
-                <button class="btn btn-dark">Comprar</button>
-            </div>
-            <div class="producto" id="prod-5">
-                <img src="assets/foto-5.png" alt="" srcset="">
-                <h4>Walh</h4>
-                <p>Solo por <b>$30</b>
-                <br><em>Estamos en ofertas</em>😉</p>
-                <button class="btn btn-dark">Comprar</button>
-            </div>
-            <div class="producto" id="prod-6">
-                <img src="assets/foto-6.png" alt="" srcset="">
-                <h4>SmartWatch</h4>
-                <p>Solo por <b>$30</b>
-                <br><em>Estamos en ofertas</em>😉</p>
-                <button class="btn btn-dark">Comprar</button>
-            </div>
-
-        </div>
-        <div class="carrito">
-            <h3>Listado de su compra</h3>
-            <table class="table table-light table-striped table-hover tab">
-                <tr>
-                    <th>#</th>
-                    <th>Item</th>
-                    <th>Cantidad</th>
-                    <th>Accion</th>
-                    <th>Precio Total</th>
-                </tr>
-
-            </table>
-        </div>
+    <div class="container my-2">
+        <h1>DOM - Tienda</h1>
+        <div class="row" id="items">
+            
         </div>
     </div>
-    <script src="js/main.js"></script>
+
+    <template id="template-card">
+        <div class="col-12 col-md-4 mb-2">
+            <div class="card">
+                <img src="" alt="" class="card-img-top" width="100">
+                <div class="card-body">
+                    <h5>Titulo</h5>
+                    <p>Precio: $<span></span></p>
+                    <button class="btn btn-dark">Comprar</button>
+                </div>
+            </div>
+        </div>
+    </template>
+
+    <script src="main.js"></script>
 </body>
 </html>
