--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 </head>
 <body>
     <div class="container my-2">
-        <h1>DOM - Tienda</h1>
+        <h1 class="my-4">DOM - Tienda</h1>
         <div class="row" id="items">
             
         </div>
     </div>
 
     <template id="template-card">
-        <div class="col-12 col-md-4 mb-2">
+        <div class="col-md-2 mb-2">
             <div class="card">
-                <img src="" alt="" class="card-img-top" width="100">
+                <img src="" alt="" class="card-img-top" width="50">
                 <div class="card-body">
                     <h5>Titulo</h5>
                     <p>Precio: $<span></span></p>
