--- a/index.html
+++ b/index.html
@@ -21,9 +21,25 @@
 <body>
     <div class="container my-2">
         <h1 class="my-4">DOM - Tienda</h1>
-        <div class="row" id="items">
-            
-        </div>
+        <div class="row" id="cards"></div>
+
+        <table class="table my-5">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Items</th>
+                    <th scope="col">Cantidad</th>
+                    <th scope="col">Accion</th>
+                    <th scope="col">Total</th>
+                </tr>
+            </thead>
+            <tbody id="items"></tbody>
+            <tfoot>
+                <tr id="footer">
+                    <th scope="row" colspan="5">Carrito vacio - comience a comprar ya!</th>
+                </tr>    
+            </tfoot>
+        </table>
     </div>
 
     <template id="template-card">
@@ -37,6 +53,40 @@
                 </div>
             </div>
         </div>
+    </template>
+
+    <template id="template-carrito">
+        <tr>
+            <th scope="row">id</th>
+            <td>Cafe</td>
+            <td>1</td>
+
+            <td>
+                <button class="btn btn-info btn-sm">
+                    +
+                </button>
+                <button class="btn btn-danger btn-sm">
+                    -
+                </button>
+            </td>
+            <td>
+                $ <span>100</span> 
+            </td>
+        </tr>
+    </template>
+    <template id="template-footer">
+
+            <th scope="row" colspan="2">Total Productos</th>
+            <td>10</td>
+            <td>
+                <button class="btn btn-danger btn-sm" id="vaciar">
+                    Vaciar Todo
+                </button>
+            </td>
+            <td class="fw-bold">
+                $ <span>5000</span>
+            </td>
+
     </template>
 
     <script src="main.js"></script>
