Agregado guardado en localstorage

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <div class="container my-2">
-        <h1 class="my-4">DOM - Tienda</h1>
+        <h1 class="my-4">DOM - Tienda de camilitard01</h1>
         <div class="row" id="cards"></div>
 
         <table class="table my-5">
